# dnn-arithmetic

./: AGENTS.md  README.md  pyproject.toml
experiments/2026-03-24-addition-8bit/: notes.md  run.py
experiments/2026-03-24-addition-8bit/outputs/: metrics.json  summary.txt
experiments/2026-03-24-architecture-sweep/: _bench_dense.py  experimental_models.py  notes.md  run.py  run2.py  run3.py  run4.py
experiments/2026-03-24-architecture-sweep/outputs/: inverse_bottleneck_metrics.json  inverse_bottleneck_summary.txt  metrics.json  mixing_metrics.json  mixing_summary.txt  residual_sweep_metrics.json  residual_sweep_summary.txt  summary.txt
experiments/2026-03-24-multiplication-8bit/: notes.md  run.py
experiments/2026-03-24-multiplication-8bit/outputs/: metrics.json  summary.txt
experiments/2026-03-24-residual-diagnostics/: notes.md  run.py
experiments/2026-03-24-residual-diagnostics/outputs/: metrics.json  summary.txt
scripts/: test_addition.py
src/dnn_arithmetic/: loaders.py  models.py  plotting.py  training.py
